--- a/views/privada/editar_perfil.html
+++ b/views/privada/editar_perfil.html
@@ -121,12 +121,12 @@
                                         </label>
                                         <input type="text" class="form-control" id="nombre_usuario"
                                             name="nombre_usuario" aria-describedby="emailHelp" size="40" maxlength="50"
-                                            required>
+                                            autocomplete="off" required>
                                         <label for="password_user" class="form-label">
                                             <h2>Contraseña</h2>
                                         </label>
                                         <input type="text" class="form-control" id="password_user" size="40"
-                                            name="password_user" maxlength="150" required>
+                                        type="password" name="password_user" maxlength="150" autocomplete="off" required>
                                     </div>
                                     <div class="col-12 d-flex justify-content-center">
                                         <button type="submit" class="btn btn-dark logIndButton" id="btnmenu"><a
