--- a/views/privada/gestion_propiedad.html
+++ b/views/privada/gestion_propiedad.html
@@ -173,50 +173,50 @@
                                 <div class="col">
                                     <label for="direccion" class="form-label">Direccion</label>
                                     <textarea id="direccion" name="direccion_update" rows="8" class="form-control"
-                                        placeholder="Escriba la Direccion" required></textarea>
+                                    autocomplete="off" placeholder="Escriba la Direccion" required></textarea>
 
                                     <label for="area_propiedad" class="form-label">Área Propiedad</label>
                                     <input type="number" class="form-control" id="area_propiedad_i"
-                                        name="area_propiedad_update" placeholder="0 Km2" min="1" max="100000" required>
+                                    autocomplete="off" name="area_propiedad_update" placeholder="0 Km2" min="1" max="100000" required>
 
                                     <label for="area_construccion" class="form-label">Área Construcción</label>
                                     <input type="number" class="form-control" id="area_construccion"
-                                        name="area_construccion_update" placeholder="0 Km2" min="1" max="100000"
+                                    autocomplete="off" name="area_construccion_update" placeholder="0 Km2" min="1" max="100000"
                                         required>
 
                                     <label for="codigo" class="form-label">Código</label>
                                     <input type="text" class="form-control" id="codigo" name="codigo_update"
-                                        placeholder="Ingrese un codigo" required>
+                                    autocomplete="off" placeholder="Ingrese un codigo" required>
 
                                     <label for="precio" class="form-label">Precio</label>
                                     <input type="number" class="form-control" id="precio" name="precio_update"
-                                        placeholder="00.00$" min="1" max="100000" required>
+                                    autocomplete="off" placeholder="00.00$" min="1" max="100000" required>
                                 </div>
                                 <div class="col">
                                     <label for="alquiler" class="form-label">Alquiler</label>
                                     <input type="number" class="form-control" id="alquiler_i" name="alquiler_update"
-                                        placeholder="00.00$" min="1" max="100000" required>
+                                    autocomplete="off" placeholder="00.00$" min="1" max="100000" required>
 
                                     <label for="habitaciones" class="form-label">Habitaciones</label>
                                     <input type="number" class="form-control" id="habitaciones"
-                                        name="habitaciones_update" placeholder="0 Habitaciones" min="1" max="100000"
+                                    autocomplete="off" name="habitaciones_update" placeholder="0 Habitaciones" min="1" max="100000"
                                         required>
 
                                     <label for="plantas" class="form-label">Plantas</label>
                                     <input type="number" class="form-control" id="plantas" name="plantas_update"
-                                        placeholder="0 Plantas" min="1" max="100000" required>
+                                    autocomplete="off" placeholder="0 Plantas" min="1" max="100000" required>
 
                                     <label for="sanitario" class="form-label">Sanitario</label>
                                     <input type="number" class="form-control" id="sanitario" name="sanitario_update"
-                                        placeholder="0 Baños" min="1" max="100000" required>
+                                    autocomplete="off" placeholder="0 Baños" min="1" max="100000" required>
 
                                     <label for="espacio_parqueo" class="form-label">Espacio de Parqueo</label>
                                     <input type="number" class="form-control" id="espacio_parqueo_i"
-                                        name="espacio_update" placeholder="0 Vehiculos" min="1" max="100000" required>
+                                    autocomplete="off" name="espacio_update" placeholder="0 Vehiculos" min="1" max="100000" required>
 
                                     <label for="descripcion" class="form-label">Descripción</label>
                                     <textarea id="descripcion_i" name="descripcion_update" rows="6" class="form-control"
-                                        placeholder="Escriba una Descripción" maxlength="1000" required></textarea>
+                                    autocomplete="off" placeholder="Escriba una Descripción" maxlength="1000" required></textarea>
                                 </div>
 
                                 <div class="col">
@@ -289,19 +289,19 @@
                                 <div class="col">
                                     <label for="direccion_update" class="form-label">Direccion</label>
                                     <textarea id="direccion_update" name="direccion_update" rows="8"
-                                        class="form-control" required></textarea>
+                                    autocomplete="off" class="form-control" required></textarea>
 
                                     <label for="area_propiedad_update" class="form-label">Área Propiedad</label>
                                     <input type="number" class="form-control" id="area_propiedad_update"
-                                        name="area_propiedad_update" min="1" max="100000" required>
+                                    autocomplete="off" name="area_propiedad_update" min="1" max="100000" required>
 
                                     <label for="area_construccion_update" class="form-label">Área Construcción</label>
                                     <input type="number" class="form-control" id="area_construccion_update"
-                                        name="area_construccion_update" min="1" max="100000" required>
+                                    autocomplete="off" name="area_construccion_update" min="1" max="100000" required>
 
                                     <label for="codigo_update" class="form-label">Código</label>
                                     <input type="text" class="form-control" id="codigo_update" name="codigo_update"
-                                        required>
+                                    autocomplete="off" required>
 
                                     <label for="precio_update" class="form-label">Precio</label>
                                     <input type="number" class="form-control" id="precio_update" name="precio_update"
@@ -310,23 +310,23 @@
                                 <div class="col">
                                     <label for="alquiler_update" class="form-label">Alquiler</label>
                                     <input type="number" class="form-control" id="alquiler_update"
-                                        name="alquiler_update" min="1" max="999999" required>
+                                    autocomplete="off" name="alquiler_update" min="1" max="999999" required>
 
                                     <label for="habitaciones_update" class="form-label">Habitaciones</label>
                                     <input type="number" class="form-control" id="habitaciones_update"
-                                        name="habitaciones_update" min="1" max="100000" required>
+                                    autocomplete="off" name="habitaciones_update" min="1" max="100000" required>
 
                                     <label for="plantas_update" class="form-label">Plantas</label>
                                     <input type="text" class="form-control" id="plantas_update" name="plantas_update"
-                                        min="1" max="100000" required>
+                                    autocomplete="off" min="1" max="100000" required>
 
                                     <label for="sanitario_update" class="form-label">Sanitario</label>
                                     <input type="text" class="form-control" id="sanitario_update"
-                                        name="sanitario_update" min="1" max="100000" required>
+                                    autocomplete="off" name="sanitario_update" min="1" max="100000" required>
 
                                     <label for="espacio_parqueo_update" class="form-label">Espacio de Parqueo</label>
                                     <input type="text" class="form-control" id="espacio_parqueo_update"
-                                        name="espacio_update" min="1" max="100000" required>
+                                    autocomplete="off" name="espacio_update" min="1" max="100000" required>
 
                                     <label for="descripcion_updat" class="form-label">Descripción</label>
                                     <textarea id="descripcion_update" name="descripcion_update" rows="6"
