--- a/views/privada/gestion_tipo_inquilino.html
+++ b/views/privada/gestion_tipo_inquilino.html
@@ -157,7 +157,7 @@
                                 <div class="col">
                                     <label for="Inquilino" class="form-label">Nombre del tipo Inquilino</label>
                                     <input type="text" class="form-control" id="tipo_inquilino"
-                                        name="tipo_inquilino" placeholder="Escriba un nombre a la inquilino"
+                                    autocomplete="off" name="tipo_inquilino" placeholder="Escriba un nombre a la inquilino"
                                         required>
                                 </div>
                             </div>
@@ -190,7 +190,7 @@
                                 <div class="col">
                                     <label for="inquilino" class="form-label">Nombre del tipo Inquilino</label>
                                     <input type="text" class="form-control" id="tipo_inquilino_update"
-                                        name="tipo_inquilino_update" placeholder="Escriba el nombre del tipo inquilino"
+                                    autocomplete="off" name="tipo_inquilino_update" placeholder="Escriba el nombre del tipo inquilino"
                                         required>
                                 </div>
                                 <div class="col">
@@ -288,6 +288,26 @@
                 </div>
             </div>
         </div>
+
+                            <!-- MODAL DE ERROR GENERICO -->
+                            <div class="modal fade" id="modalErrorDeBaseDeDatos" tabindex="-1">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header" id="formHeader">
+                                            <h5 class="modal-title">Error en el proceso</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p id="dataBaseErrorMessage">
+                                                ...
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
     </main>
     <footer class="text-white  pt-5 pb-4" id="Segundofooter">
         <div class="container-fluid">
