--- a/views/publica/index.html
+++ b/views/publica/index.html
@@ -242,11 +242,11 @@
             <form method="post" id="insert-modal">
               <div class="col-10">
                 <p>Ingrese su nombre:</p>
-                <input type="text" class="form-control" name="nombre_cliente" placeholder="Ingrese su nombre">
+                <input type="text" class="form-control" name="nombre_cliente" placeholder="Ingrese su nombre"  autocomplete="off" required>
               </div>
               <div class="col-12">
                 <p>Ingrese su correo electronico:</p>
-                <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo">
+                <input type="email" class="form-control" name="correo" placeholder="Ingrese el correo"  autocomplete="off" required>
               </div>
               <div class="col-12 d-flex justify-content-center">
                 <button type="submit" class="btn">Enviar</button>
