--- a/resources/css/estilo_privado.css
+++ b/resources/css/estilo_privado.css
@@ -18,6 +18,8 @@ height: 60px;
     align-items: center;
     font-size: 16px;
     padding-top: 5px;
+    height: 35px;
+    width: 200px;
 }
 
 #cotones{
