--- a/views/privada/gestion_tipo_acabado.html
+++ b/views/privada/gestion_tipo_acabado.html
@@ -160,7 +160,7 @@
                                 <div class="col">
                                     <label for="tipo_acabado" class="form-label">Nombre de Tipo Acabado.</label>
                                     <input type="text" class="form-control" id="tipo_acabado" name="tipo_acabado"
-                                        placeholder="Escriba un nombre a la Tipo Acabado" required>
+                                    autocomplete="off" placeholder="Escriba un nombre a la Tipo Acabado" required>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                                 <div class="col">
                                     <label for="tipo_acabado_update" class="form-label">Nombre de Tipo Acabado.</label>
                                     <input type="text" class="form-control" id="tipo_acabado_update"
-                                        name="tipo_acabado_update" required>
+                                    autocomplete="off" name="tipo_acabado_update" required>
                                         <div class="form-check form-switch">
                                             <input onclick="cambiarVisibilidadDeResgistro()" class="form-check-input" type="checkbox" role="switch"
                                                 id="eliminarElemento" >
@@ -297,6 +297,26 @@
                     </div>
                     <div class="modal-body">
                         No se pudo realizar el proceso debido a que hubo un error.
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+                               <!-- MODAL DE ERROR GENERICO -->
+        <div class="modal fade" id="modalErrorDeBaseDeDatos" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header" id="formHeader">
+                        <h5 class="modal-title">Error en el proceso</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="dataBaseErrorMessage">
+                        ...
+                        </p>
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
