--- a/views/privada/gestion_tipo_propiedad.html
+++ b/views/privada/gestion_tipo_propiedad.html
@@ -156,7 +156,7 @@
                                 <div class="col">
                                     <label for="tipo_propiedad" class="form-label">Nombre de Tipo Propiedad.</label>
                                     <input type="text" class="form-control" id="tipo_propiedad" name="tipo_propiedad"
-                                        placeholder="Escriba un nombre a la Tipo Propiedad" required>
+                                    autocomplete="off" placeholder="Escriba un nombre a la Tipo Propiedad" required>
                                     <select onchange="selectIdCategoria('listado_categorias_id')"
                                         id="listado_categorias_id" name="proveedores_select" class="form-control">
                                     </select>
@@ -193,7 +193,7 @@
                                     <label for="tipo_propiedad_update" class="form-label">Nombre de Tipo
                                         Propiedad.</label>
                                     <input type="text" class="form-control" id="tipo_propiedad_update"
-                                        name="tipo_propiedad_update" required>
+                                    autocomplete="off" name="tipo_propiedad_update" required>
                                     <select onchange="selectIdCategoria('listado_categorias_id_u')"
                                         id="listado_categorias_id_u" name="proveedores_select" class="form-control">
                                     </select>
@@ -325,6 +325,26 @@
                 </div>
             </div>
         </div>
+
+                            <!-- MODAL DE ERROR GENERICO -->
+                            <div class="modal fade" id="modalErrorDeBaseDeDatos" tabindex="-1">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header" id="formHeader">
+                                            <h5 class="modal-title">Error en el proceso</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p id="dataBaseErrorMessage">
+                                                ...
+                                            </p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button class="btn btn-primary" data-bs-dismiss="modal" id="btnmenu">Aceptar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
     </main>
     <footer class="text-white  pt-5 pb-4" id="Segundofooter">
         <div class="container-fluid">
